[gd_scene load_steps=8 format=3 uid="uid://cfdbjhmgm6uy4"]

[ext_resource type="Theme" uid="uid://l28o45infhdy" path="res://scenes/ui/game.theme" id="1_twj8p"]
[ext_resource type="Script" path="res://scenes/ui/level_info_bar/level_info_bar.gd" id="2_q3r68"]
[ext_resource type="Shader" path="res://shaders/palette_swap.gdshader" id="3_gcush"]
[ext_resource type="Texture2D" uid="uid://h0jq4je3xbt7" path="res://assets/graphics/palettes/warm-ochre-4-1x.png" id="4_sgr4q"]
[ext_resource type="Texture2D" uid="uid://b7m2v4p5ab82w" path="res://assets/graphics/palettes/moonlight-gb-4-1x.png" id="5_81tc8"]
[ext_resource type="Script" path="res://scripts/nodes/ColorRectSwap.gd" id="6_llwef"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4syjh"]
shader = ExtResource("3_gcush")
shader_parameter/num_colors = 4
shader_parameter/invert = false
shader_parameter/base_palette = ExtResource("4_sgr4q")
shader_parameter/new_palette = ExtResource("5_81tc8")

[node name="LevelInfoBar" type="MarginContainer"]
texture_filter = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("1_twj8p")
theme_override_constants/margin_top = 24
script = ExtResource("2_q3r68")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="SpawningPanel" type="PanelContainer" parent="Layout"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="Layout/SpawningPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/SpawningPanel/Info"]
layout_mode = 2
theme_type_variation = &"LabelDarker"
text = "Spawned: "

[node name="LBL_Spawning_Value" type="Label" parent="Layout/SpawningPanel/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "0/0"

[node name="LostPanel" type="PanelContainer" parent="Layout"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="Layout/LostPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/LostPanel/Info"]
layout_mode = 2
theme_type_variation = &"LabelDarker"
text = "Lost: "

[node name="LBL_Lost_Value" type="Label" parent="Layout/LostPanel/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RescuedPanel" type="PanelContainer" parent="Layout"]
layout_mode = 2

[node name="Info" type="HBoxContainer" parent="Layout/RescuedPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/RescuedPanel/Info"]
layout_mode = 2
theme_type_variation = &"LabelDarker"
text = "Progressed: "

[node name="LBL_Prog_Value" type="Label" parent="Layout/RescuedPanel/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "0/0"

[node name="ColorRectSwap" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4syjh")
layout_mode = 2
script = ExtResource("6_llwef")
